# ai_spotibot_player

./: .cache  .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeConfigureLog.yaml  CMakeLists.txt  CNAME  CONTRIBUTOR_DATASET_GUIDE.md  EMOTIONAL_AI_MANIFESTO.md  LICENSE  LICENSE.txt  README.md  SYSTEM_DEPENDENCIES.md  audio_utils.cpp  audio_utils.h  audioscript_runtime.py  audioscript_runtime_safe.py  initial-script.py  install.sh  main.cpp  main.h  main_utils.cpp  pulseaudio_oss.sh  requirements.txt  scaffold-script.py  setup.sh  spotify_robot.py  test_eq.audioscript  validate_dataset.py  version.py
.github/: FUNDING.yml
audio/: extraction.py  launch_ai.py  mood_classifier.py
audio/ai/: analyze_audio.py  audience_listener.py  core_runtime.py  inference_engine.py  lighting_orchestrator.py  main_analysis.py  schemas.py
audio/ai/analysis/: analyze_audio.py  audience_listener.py  features_summary.py  inference_engine.py
audio/ai/audio2script/: dev_sanity.py
audio/ai/compiler/: run.py
audio/ai/compiler/audio2script/: __init__.py  analyzer.py  event_mapper.py  script_ir.py
audio/ai/compiler/test/: test_analyzer.py  test_event_mapper.py  test_script_generator.py
audio/ai/core/: ai_spotibot_player.code-workspace  confidence.py  core_runtime.py  decision_engine.py
audio/ai/datasets/: AudioMIX_metadata.csv  labels.jsonl
audio/ai/modules/: convert_audio.py  eq_dataset.py  feature_extraction.py  lightning_module.py  merge_dataset.py  predict_eq.py  tempo_analysis.py  train_eq_model.py
audio/ai/planners/: lighting_orchestrator.py
audio/ai/training/: train_audio_model.py
audio/analysis_output/: README.md  analysis.py  features_summary.json  generate_audio_features.py  plot_eq_presets.py  plot_waveform.py  waveform.csv
audio/analysis_output/data/: audio_features.json  cvltiv8r_clean_waveform.json  eq_labels.json  ilariio_soft-chill-vibes_waveform.json  tmp512ztk2m_eq.audioscript  tmpqtvxqy2k_eq.audioscript
audio/dsp/: audiomix_dsp.h
audio/dsp/core/: biquad.h  compressor_params.h  compressor_params_parse.h  delay_line.h  dsp_chain.h  dsp_module.h  eq_params.h  eq_params_parse.h  lfo.h  process_context.h  process_spec.h  rbj_coeffs.h  smooth_parameter.h  smoothed_parameter.h  subbass_bus.h
audio/dsp/core/control/: param_ids.h  param_registry.h
audio/dsp/modules/: CMakeLists.txt  ascension_reverb.h  clipper_module.cpp  clipper_module.h  compressor_module.h  digital_choir.cpp  digital_choir.h  eq_module.h  gain_module.cpp  gain_module.h  null_sink.h  shimmer.cpp  shimmer.h  subbass_isolation.cpp  subbass_isolation.h
audio/dsp/tests/: test_clipper.cpp  test_sine_dsp.cpp
audio/eq/: eq_apply.py  eq_commands.py  eq_engine.py  eq_loader.py  eq_presets.json  eq_send_preset.py  equalizer.py  live_eq_stream.py  predict_and_apply_eq.py  presets.json  test_eq_preset.py
audio/eq/presets/: presets_combined.json
audio/led/: audio_reactive.py  color_profiles.py  color_profiles.py.save  controller.py  controller.py.save  run_lights.py
audio/led-service/: main.py  main.py.save
audio/midi/: extract_midi_features.py  midi_live_listener.py  midi_map.json  midi_tag_classifier.py  pretty_midi_parser.py  tag_map.json  tag_to_settings.py
audio/midi/features/: Never-Gonna-Give-You-Up_features.json  chopin-etude-op10-no4_features.json  midi_tag_index.json
audio/samples/: make_test_wav.py
audio/utils/: codec_sim.py
audio_providers/: provider_api.py
audio_providers/bandcamp/: bandcamp_embed.py
audio_providers/spotify/: diagnostic.py  spotify_adapter.py  spotify_api_features.py  spotify_registry.py
audioscript/: AUDIOSCRIPT_SPEC.md  AudioScript.ebnf  README.md  audioscript.nanorc  command_registry.yaml  cvltiv8r_clean.as  example.as  intro_showcase.audioscript
audioscript/compiler/: run.py
audioscript/compiler/audio2script/: analyzer.py  cli.py  dev_sanity.py  event_mapper.py  script_generator.py  script_ir.py  smooth_sections.py  type_system.py
audioscript/compiler/test/: test_analyzer.py  test_event_mapper.py  test_event_mapper_v1.py  test_medium_analyzer.py  test_script_generator.py  test_smooth_sections.py
audioscript/ir/: AudioScriptIR.ebnf  README.md
audioscript/live/: AudioScriptLive.ebnf  intro_showcase.audioscript
audioscript/scripts/: basic_performance.as  discovery_and_boost.audioscript  reset_and_switch.audioscript  semantic_live_mix.as
dev_tools/: waveform_to_json.py  waveform_tools.py
docs/: AudioMIX_project_tree.txt  requirements.txt
docs/dsp/: AscensionReverbModule.md  ControlPlane.md  CoreInfrastructure.md
hardware/: led_controller.py  mood_feedback.py
interface/: bot_response.py  speech.py  tts.py
models/: eq_model.pt
models/eq/: eq_labels.txt  eq_model.pt
performance_engine/: dsp_bridge.py  event_bus.py  preview.py  serial_listener.py  session_state.py
performance_engine/config/: midi_performance_map.json  sampler_bank_drums.json
performance_engine/modules/: audience_listener.py  audio_player.py  audio_recorder.py  clip_launcher.py  compressor.py  context.py  crossfade.py  eq.py  fade_mod.py  led_controller.py  midi.py  midi_bridge.py  mixer_panel.py  mood_engine.py  provider_commands.py  reset.py  sampler.py  sequencer.py  session_builder.py  shared.py  shell_tools.py  track_engine.py
performance_engine/utils/: shell_output.py
runtime/: core.py  dsl_helpers.py  runtime_state.py
spotify/: player.py
